[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = "A FastAPI backend for tracking and gaming applications"
authors = ["sharmamagi0@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.95.2"
uvicorn = "0.21.1"
opencv-python-headless = "4.5.5.64"
mediapipe = "0.8.9.1"
pygame = "2.1.0"
pyautogui = "0.9.53"
numpy = "1.21.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"