[tool.poetry]
name = "backend-repo"
version = "0.1.0"
description = "A backend project using FastAPI and other dependencies"
authors = ["sharmamagi0@gmail.com"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.11"
uvicorn = "0.34.0"
opencv-python-headless = "4.11.0.86"
mediapipe = "0.10.21"
pygame = "2.6.1"
pyautogui = "0.9.54"
numpy = "1.23.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
